[gd_scene load_steps=15 format=3 uid="uid://uj17mftspgfb"]

[ext_resource type="Script" path="res://scripts/credits_screen.gd" id="1_bifw3"]
[ext_resource type="FontFile" uid="uid://dtbo7ufseye1o" path="res://assets/fonts/PixelOperator8.ttf" id="2_hxy26"]
[ext_resource type="Script" path="res://scripts/music_credit.gd" id="2_sn8wp"]
[ext_resource type="AudioStream" uid="uid://dsk8arux4e57g" path="res://assets/sounds/select.wav" id="3_f8rgw"]
[ext_resource type="AudioStream" uid="uid://c7ausv526nehp" path="res://assets/sounds/enter.wav" id="4_i8bhr"]

[sub_resource type="Curve" id="Curve_2qyig"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_xwo2d"]
curve = SubResource("Curve_2qyig")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6ixd7"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 1, 0)
angle_max = 360.0
direction = Vector3(0, 1, 0)
spread = 9.603
initial_velocity_min = 65.16
initial_velocity_max = 685.39
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_xwo2d")
color = Color(1, 0, 0, 1)

[sub_resource type="Environment" id="Environment_n8tvd"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.12
glow_blend_mode = 1

[sub_resource type="Theme" id="Theme_4dxx4"]
default_font = ExtResource("2_hxy26")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qcrp"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_txdx8"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7qcw"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxo5k"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0, 0, 1)

[node name="CreditsScreen" type="ColorRect"]
process_mode = 3
z_index = 5
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_bifw3")

[node name="CreditsTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294271
anchor_top = 0.198142
anchor_right = 0.705729
anchor_bottom = 0.312694
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hxy26")
theme_override_font_sizes/font_size = 56
text = "Credits
"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="GameDev" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294271
anchor_top = 0.425926
anchor_right = 0.705729
anchor_bottom = 0.462963
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hxy26")
theme_override_font_sizes/font_size = 32
text = "Game by  CodeSkipz
"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="MusicTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294271
anchor_top = 0.561728
anchor_right = 0.705729
anchor_bottom = 0.598765
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hxy26")
theme_override_font_sizes/font_size = 32
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="MusicTrack" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112847
anchor_top = 0.617284
anchor_right = 0.887153
anchor_bottom = 0.666667
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hxy26")
theme_override_font_sizes/font_size = 24
text = "Not For Myself - Composed by One Man Sumphony"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="MusicBy" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0928819
anchor_top = 0.62963
anchor_right = 0.907118
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_hxy26")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]
[url]https://onemansymphony.bandcamp.com[/url]
[/center]"
scroll_active = false
script = ExtResource("2_sn8wp")
metadata/_edit_use_anchors_ = true

[node name="SFX" type="Node" parent="."]

[node name="Select" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("3_f8rgw")
bus = &"SFX"

[node name="Enter" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_i8bhr")
bus = &"SFX"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(593, -30)
amount = 100
process_material = SubResource("ParticleProcessMaterial_6ixd7")
lifetime = 4.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n8tvd")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.875664
anchor_right = 0.5
anchor_bottom = 0.875664
offset_left = -140.0
offset_top = -46.43
offset_right = 140.0
offset_bottom = 46.57
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4dxx4")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_0qcrp")
theme_override_styles/hover = SubResource("StyleBoxFlat_txdx8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n7qcw")
theme_override_styles/focus = SubResource("StyleBoxFlat_uxo5k")
action_mode = 0
text = "Back"
metadata/_edit_use_anchors_ = true

[connection signal="meta_clicked" from="MusicBy" to="." method="_on_music_by_meta_clicked"]
[connection signal="meta_hover_ended" from="MusicBy" to="." method="_on_music_by_meta_hover_ended"]
[connection signal="meta_hover_started" from="MusicBy" to="." method="_on_music_by_meta_hover_started"]
[connection signal="finished" from="SFX/Enter" to="." method="_on_enter_finished"]
[connection signal="focus_exited" from="BackButton" to="." method="_on_back_button_focus_exited"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
